# grampilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/instagram-approve/: README.md  SKILL.md
.claude/skills/instagram-generate/: README.md  SKILL.md
.claude/skills/instagram-init/: README.md  SKILL.md
.claude/skills/instagram-insights/: README.md  SKILL.md
.claude/skills/instagram-media/: README.md  SKILL.md
.claude/skills/instagram-plan/: README.md  SKILL.md
.claude/skills/instagram-publish/: README.md  SKILL.md
.instagram/: config.yml
.instagram/scripts/bash/: approve.sh  generate.sh  init.sh  insights.sh  media.sh  plan.sh  publish.sh
.instagram/templates/: brand-template.md
.instagram/templates/prompts/: analyze-style.md  generate-caption.md  generate-carousel.md  generate-hashtags.md  generate-reel-script.md  plan-week.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-instagram-ai-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/instagram_manager/: __main__.py  brand.py  cli.py  generator.py  image_client.py  insights.py  logger.py  media.py  meta_client.py  models.py  planner.py  publisher.py  storage.py
tests/integration/: test_image_client.py  test_meta_client.py
tests/unit/: test_generator.py  test_insights.py  test_media.py  test_models.py  test_planner.py  test_publisher.py  test_storage.py
(+2 files in other folders)
