[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-manager"
version = "0.1.0"
description = "Instagram content management CLI skills for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "huggingface_hub>=0.21",
    "Pillow>=10.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
instagram-manager = "instagram_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
